# smalldata

./: .editorconfig  .env.dist  .gitignore  .lefthook.yml  .ruff.toml  .sqlfluff  .sqlfluffignore  README.md  compose.yml  pyproject.toml  tasks.py
.jupyter/: jupyter_notebook_config.py
doc/samples/: duckdb_cloud_storage.ipynb  duckdb_google_sheets.ipynb  duckdb_iceberg.ipynb  duckdb_udf.ipynb
etc/docker/mysql/docker-entrypoint-initdb.d/: 001_create_dbs.sql  002_create_tables.sql
etc/metaflow/examples/local_files/: first.jsonl
etc/smalldata/samples/local_files/: third.jsonl
src/experimentation/: jaffle_shop.ipynb
src/experimentation/samples/: duckdb_cloud_storage.ipynb  duckdb_export.ipynb  duckdb_google_sheets.ipynb  duckdb_iceberg.ipynb  duckdb_udf.ipynb
src/ingestion/: jaffle_shop.py
src/ingestion/kaggle/michau96/: internet-search-engine-worldwide.py
src/ingestion/samples/: cloud_storage.py  local_file_system.py  mysql.py
src/orchestration/: __init__.py  jaffle_shop.py
src/smalldata/experimentation/examples/: README.md  duckdb_iceberg.ipynb  duckdb_udf.ipynb  duckdb_with_aws_s3.ipynb
src/smalldata/ingestion/examples/: README.md  kaggle.py  local_file.py  mysql.py
src/smalldata/transformation/: profiles.yml
src/smalldata/transformation/example/: README.md  dbt_project.yml
src/smalldata/visualization/examples/: README.md
src/transformation/: profiles.yml
src/transformation/jaffle_shop/: .sqlfluff  .sqlfluffignore  dbt_project.yml  packages.yml  profiles.yml
src/transformation/sample/mysql/: dbt_project.yml
src/visualization/jaffle_shop/: Welcome.py  main.py
(+69 files in other folders)
