[project]
name = "smalldata"

version = "0.1.0"

description = "A very small data platform that is runnable on a local machine"

requires-python = ">= 3.13"
dependencies = [
    "jupyter>=1.1.1",
]


[dependency-groups]
core = [
  "dbt-core == 1.8.8",
  "dbt-duckdb == 1.9.0",
  "ipykernel == 6.29.5",
  "streamlit == 1.40.2",
]

core-dev = [
  "duckdb == 1.1.3",
  "lefthook == 1.8.2",
  "ruff == 0.7.4",
  "sqlfluff == 3.2.5",
  "sqlfluff-templater-dbt == 3.2.5",
]

user = [
  "kagglehub == 0.3.4",
  "pandas == 2.2.3",
  "pygwalker == 0.4.9.13",
  "pyiceberg[hive] == 0.8.1",
  "pyiceberg[s3fs] == 0.8.1",
  "pymysql == 1.1.1",
  "s3fs == 2024.10.0",
]


[tool.uv]
default-groups = [
  "core",
  "core-dev",
  "user",
]
